--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     </nav>
 
     <div id="gameContainer">
+        <div class="tiles"></div>
+        <div class="tiles"></div>
+        <div class="tiles"></div>
+        <div class="tiles"></div>
+        <div class="tiles"></div>
+        <div class="tiles"></div>
+        <div class="tiles"></div>
+        <div class="tiles"></div>
+        <div class="tiles"></div>
     </div>
     
     <script src="scripts/scripts.js"></script>
