--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </nav>
 
     <div id="gameContainer">
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
-        <div class="tiles"></div>
+        <div class="tiles" id="tile1"></div>
+        <div class="tiles" id="tile2"></div>
+        <div class="tiles" id="tile3"></div>
+        <div class="tiles" id="tile4"></div>
+        <div class="tiles" id="tile5"></div>
+        <div class="tiles" id="tile6"></div>
+        <div class="tiles" id="tile7"></div>
+        <div class="tiles" id="tile8"></div>
+        <div class="tiles" id="tile9"></div>  
     </div>
-    
+
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
