added choice options and turn indicator text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id="playButton">PLAY</button>
     </nav>
 
+    <h3 id="turnTitle"></h3>
     <div id="gameContainer">
         <div class="tiles" id="tile1"></div>
         <div class="tiles" id="tile2"></div>
@@ -22,6 +23,11 @@
         <div class="tiles" id="tile7"></div>
         <div class="tiles" id="tile8"></div>
         <div class="tiles" id="tile9"></div>  
+    </div>
+    <div id="choiceOptions">
+        <h1>CHOOSE YOUR PIECE:</h1>
+        <img class="optionsImages" src="images/x.png" id="xImage" alt="x"/>
+        <img class="optionsImages" src="images/o.png" id="oImage" alt="o"/>
     </div>
 
     <script src="scripts/scripts.js"></script>
