removed initial play button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <h1 id="title">TIC TAC TOE</h1>
-    <nav>
-        <button id="playButton">PLAY</button>
-    </nav>
 
     <h3 id="turnTitle"></h3>
     <div id="gameContainer">
@@ -29,6 +26,10 @@
         <img class="optionsImages" src="images/x.png" id="xImage" alt="x"/>
         <img class="optionsImages" src="images/o.png" id="oImage" alt="o"/>
     </div>
+
+    <nav>
+        <button id="playAgain">PLAY AGAIN</button>
+    </nav>
 
     <script src="scripts/scripts.js"></script>
 </body>
