started working on pvp and pvc

--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
         <img class="optionsImages" src="images/x.png" id="xImage" alt="x"/>
         <img class="optionsImages" src="images/o.png" id="oImage" alt="o"/>
     </div>
+    <div id="gameOptions">
+        <h1>CHOOSE YOUR GAME:</h1>
+        <nav>
+            <button id="playerVplayer">PLAYER V PLAYER</button>
+        </nav>
+        <nav>
+            <button id="playerVcomputer">PLAYER V COMPUTER</button>
+        </nav>
+    </div>
 
+    <nav>
+        <button id="restart">RESTART</button>
+    </nav>
     <nav>
         <button id="playAgain">PLAY AGAIN</button>
     </nav>
