--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="title">TIC TAC TOE</h1>
+    <div id="timer">00:00</div>
 
     <h3 id="turnTitle"></h3>
     <div id="gameContainer">
@@ -20,11 +21,6 @@
         <div class="tiles" id="tile7"></div>
         <div class="tiles" id="tile8"></div>
         <div class="tiles" id="tile9"></div>  
-    </div>
-    <div id="choiceOptions">
-        <h1>CHOOSE YOUR PIECE:</h1>
-        <img class="optionsImages" src="images/x.png" id="xImage" alt="x"/>
-        <img class="optionsImages" src="images/o.png" id="oImage" alt="o"/>
     </div>
     <div id="gameOptions">
         <h1>CHOOSE YOUR GAME:</h1>
